<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:key="general_settings"
        android:title="@string/general_settings">

        <ListPreference
            android:key="pref_encoding"
            android:summary="%s"
            android:title="@string/pref_encoding"
            android:dialogTitle="@string/pref_encoding"
            android:entries="@array/pref_encoding_entries"
            android:entryValues="@array/pref_encoding_values"
            android:defaultValue="@string/pref_encoding_default"
            />

        <Preference
            android:key="game_files"
            android:title="@string/game_files"
            />

        <Preference
            android:key="pref_game_settings"
            android:title="Game Settings"
            />

        <Preference
            android:title="@string/mods"
            android:key="pref_mods"
            />
    </PreferenceCategory>


    <PreferenceCategory android:title="@string/pref_ui">
        <Preference
            android:title="@string/action_show_screen_controls"
            android:key="pref_controls"
            />

        <EditTextPreference
            android:key="pref_uiScaling"
            android:title="@string/pref_uiScaling"
            android:dialogTitle="@string/pref_uiScaling"
            android:inputType="numberDecimal"
            android:hint="1.5"
            />

        <ListPreference
            android:key="pref_mouse_mode"
            android:title="@string/pref_mouse_mode"
            android:dialogTitle="@string/pref_mouse_mode"
            android:entries="@array/pref_mouse_mode_entries"
            android:entryValues="@array/pref_mouse_mode_values"
            android:defaultValue="@string/pref_mouse_mode_default"
            android:summary="%s"
            />

        <CheckBoxPreference
            android:key="pref_hide_controls"
            android:title="@string/pref_hide_controls" />

        <CheckBoxPreference
            android:key="pref_always_show_top_bar"
            android:title="@string/pref_always_show_top_bar" />

        <CheckBoxPreference
            android:key="pref_show_qp"
            android:defaultValue="true"
            android:title="@string/pref_show_qp" />

        <CheckBoxPreference
            android:key="pref_screen_keeper"
            android:title="@string/pref_screen_keeper"/>
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/category_performance">
        <ListPreference
            android:key="pref_physicsFPS2"
            android:title="@string/pref_physicsFPS2"
            android:dialogTitle="@string/pref_physicsFPS2"
            android:entries="@array/pref_physicsFPS2_entries"
            android:entryValues="@array/pref_physicsFPS2_entries"
            android:defaultValue="@string/pref_physicsFPS2_default"
            android:summary="%s"
            />

        <CheckBoxPreference
            android:key="pref_loadKTX"
            android:title="Load KTX Textures"
            android:summary="Load ASTC converted textures, need to convert them first in mod manager."
            android:defaultValue="true"/>

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/pref_graphics">
        <EditTextPreference
            android:key="pref_customResolution"
            android:title="@string/pref_customResolution"
            android:dialogTitle="@string/pref_customResolution"
            android:hint="640x480"
            />

        <CheckBoxPreference
            android:key="pref_display_cutout_area"
            android:title="@string/pref_display_cutout_area"
            android:defaultValue="true"/>

        <CheckBoxPreference
            android:key="pref_use_spirv_shader_conv"
            android:title="@string/pref_use_spirv_shader_conv"
            android:summary="Force spirv-cross shader compiler for core shaders."
            android:defaultValue="false"/>

        <CheckBoxPreference
            android:key="pref_use_angle"
            android:title="@string/pref_use_angle"
            android:summary="Use ANGLE as OpenGL ES driver."
            android:defaultValue="true"/>

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/pref_advanced">
        <EditTextPreference
            android:key="commandLine"
            android:title="@string/pref_commandLine"
            />

        <EditTextPreference
            android:key="envLine"
            android:title="@string/pref_envLine"
            />

    </PreferenceCategory>

</PreferenceScreen>
